--- a/styles/medium.css
+++ b/styles/medium.css
@@ -1,7 +1,24 @@
-@media only screen and (max-width: 600px) {
-
+@media only screen and (min-width: 40em) {
     
+    .nav {
+        display: flex;
+        flex-direction: row;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        justify-content: space-between;
+        background-color: #CBEAA6;
+        height: 100px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
     
+    .nav li:first-child {
+        display: none;
+    }
     
+    .nav li {
+        display: block;
+    }
     
 }
