--- a/styles/weatherSites.css
+++ b/styles/weatherSites.css
@@ -1,6 +1,21 @@
+body {
+    font-family: 'Be Vietnam', sans-serif;
+}
+
+header {
+    padding-left: 5%;
+    padding-right: 5%;
+    background-color: #fadadd;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
 h2 {
     display: flex;
     justify-content: center;
+    border-bottom: 1px solid grey;
 }
 
 #weather-content {
@@ -16,10 +31,78 @@ h2 {
 }
 
 img {
+    right: 100px;
+    top: 50px;
+    height: 200px;
     width: 30%;
     height: 30%;
 }
 
 h1 {
     font-size: 200%;
+}
+
+#name-and-slogan h1 {
+    font-size: 2em;
+}
+
+.nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: #CBEAA6;
+    padding-left: 5px;
+    padding-right: 5px;
+    text-align: center;
+}
+
+.nav li:first-child {
+    display: block;
+}
+
+.nav li {
+    display: none;
+}
+
+.responsive li {
+    display: block;
+    flex-direction: column;
+    }
+
+.responsive {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    }
+
+li a {
+    text-decoration: none;
+    color: black;
+    font-size: 150%;
+}
+
+li {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+main {
+    background-color: blanchedalmond;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+footer {
+    background-color: #fadadd;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    margin-left: 10%;
+    margin-right: 10%;
 }
