--- a/styles/medium.css
+++ b/styles/medium.css
@@ -11,6 +11,9 @@
         height: 100px;
         padding-left: 5px;
         padding-right: 5px;
+        text-align: center;
+        align-content: center;
+        align-items: center;
     }
     
     .nav li:first-child {
